--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="ProjectImage">
               <img
                 class="ImageResize"
-                src="./images/ReTankImage1.PNG"
+                src="./images/ReTankImage1.png"
                 alt="ReTank"
               />
             </div>
@@ -271,44 +271,44 @@
     </div>
     <div id="MonMonImages" class="Hidden">
       <div class="MonMonImage" >
-          <img class='ImageResize' alt='' src='./images/MonMonImage1.PNG'></img>
+          <img class='ImageResize' alt='' src='./images/MonMonImage1.png'></img>
       </div>
       <div class="MonMonImage Hidden" >
-          <img class='ImageResize' alt='' src='./images/MonMonImage2.PNG'></img>
+          <img class='ImageResize' alt='' src='./images/MonMonImage2.png'></img>
       </div>
       <div class="MonMonImage Hidden" >
-          <img class='ImageResize' alt='' src='./images/MonMonImage3.PNG'></img>
+          <img class='ImageResize' alt='' src='./images/MonMonImage3.png'></img>
       </div>
       <div class="MonMonImage Hidden" >
-          <img class='ImageResize' alt='' src='./images/MonMonImage4.PNG'></img>
+          <img class='ImageResize' alt='' src='./images/MonMonImage4.png'></img>
       </div>
   </div>
   <div id="ReTankImages" class="Hidden">
     <div class="ReTankImage" >
-        <img class='ImageResize' alt='' src='./images/ReTankImage1.PNG'></img>
+        <img class='ImageResize' alt='' src='./images/ReTankImage1.png'></img>
     </div>
     <div class="ReTankImage Hidden" >
-        <img class='ImageResize' alt='' src='./images/ReTankImage2.PNG'></img>
+        <img class='ImageResize' alt='' src='./images/ReTankImage2.png'></img>
     </div>
     <div class="ReTankImage Hidden" >
-        <img class='ImageResize' alt='' src='./images/ReTankImage3.PNG'></img>
+        <img class='ImageResize' alt='' src='./images/ReTankImage3.png'></img>
     </div>
     <div class="ReTankImage Hidden" >
-        <img class='ImageResize' alt='' src='./images/ReTankImage4.PNG'></img>
+        <img class='ImageResize' alt='' src='./images/ReTankImage4.png'></img>
     </div>
 </div>
 <div id="ChargeChampsImages" class="Hidden">
   <div class="ChargeChampsImage" >
-      <img class='ImageResize' alt='' src='./images/ChargeChampsImage1.PNG'></img>
+      <img class='ImageResize' alt='' src='./images/ChargeChampsImage1.png'></img>
   </div>
   <div class="ChargeChampsImage Hidden" >
-      <img class='ImageResize' alt='' src='./images/ChargeChampsImage2.PNG'></img>
+      <img class='ImageResize' alt='' src='./images/ChargeChampsImage2.png'></img>
   </div>
   <div class="ChargeChampsImage Hidden" >
-      <img class='ImageResize' alt='' src='./images/ChargeChampsImage3.PNG'></img>
+      <img class='ImageResize' alt='' src='./images/ChargeChampsImage3.png'></img>
   </div>
   <div class="ChargeChampsImage Hidden" >
-      <img class='ImageResize' alt='' src='./images/ChargeChampsImage4.PNG'></img>
+      <img class='ImageResize' alt='' src='./images/ChargeChampsImage4.png'></img>
   </div>
       </div>
             <button class='PreviousArrow' onclick='changeSlideshowNumber(-1)'href=''>&#10094;</button><button class='NextArrow' onclick='changeSlideshowNumber(1)' href=''>&#10095;</button></div><div class='SingleProjectImageDots'><span class='Dot ActiveDot' onclick='changeActiveImage(1)'></span><span class='Dot' onclick='changeActiveImage(2)'></span><span class='Dot' onclick='changeActiveImage(3)'></span><span class='Dot' onclick='changeActiveImage(4)'></span></div></div>
