fixed tank image import

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <img class='ImageResize' alt='' src='./images/ReTankImage3.png'></img>
     </div>
     <div class="ReTankImage Hidden" >
-        <img class='ImageResize' alt='' src='./images/ReTankImage4.png'></img>
+        <img class='ImageResize' alt='' src='./images/ReTankImage4.PNG'></img>
     </div>
 </div>
 <div id="ChargeChampsImages" class="Hidden">
